	PR libgomp/47731 	* config/linux/futex.h (futex_wait): Pass NULL as timeout argument 	to FUTEX_WAIT futex syscall. 	* config/linux/wait.h: Include <futex.h> instead of "futex.h".

git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@170133 138bc75d-0d04-0410-961f-82ee72b054a4